2020-11-27  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/StandardDoclet.java:
	Interim check-in: Initial writing.

2020-11-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
	Interim check-in: Calculate Javadoc hrefs for documented classes,
	constructors, fields, and methods.

2020-08-20  Allen D. Ball  <ball@hcf.dev>

	* Initial migration from ball-javadoc-taglets-jdk8.
