@@ -1,7 +1,14 @@
-2020-11-27  Allen D. Ball  <ball@hcf.dev>
+2020-11-28  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/tools/javadoc/AbstractTaglet.java;
+	Interim check-in: Use Extern to construct external javadoc links
+	(currently fails due to ClassLoader issues).
+
+	* src/main/java/ball/tools/javadoc/Extern.java: Initial writing.
 
 	* src/main/java/ball/tools/javadoc/StandardDoclet.java:
-	Interim check-in: Initial writing.
+	Interim check-in: Configure Extern by intercepting "-link" and
+	"-linkoffline" Option.process() method calls.
 
 2020-11-24  Allen D. Ball  <ball@hcf.dev>
 
